# automotive-radar-dsp-embedded-c

./: .gitignore  CMakeLists.txt  README.md
c_embedded/include/: cfar_ca.h  doppler_fft.h  fft_core.h  radar_types.h  range_fft.h  test_vectors.h
c_embedded/src/: benchmark.c  cfar_ca.c  doppler_fft.c  fft_core.c  radar_pipeline.c  range_fft.c
c_embedded/tests/: test_cfar.c  test_fft.c  test_framework.h  test_pipeline.c
docs/: embedded_architecture.md  performance_benchmark.md  radar_dsp_pipeline.md
python_model/: angle_estimation.py  cfar.py  doppler_fft.py  generate_fmcw_data.py  radar_pipeline_demo.py  range_fft.py
results/: benchmark_table.csv  object_list.txt
